samples/_failures_safe/1761124942_e5ad99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0b91496.c: In function ‘main’:
./samples/SAFE/__tmp_f0b91496.c:161:9: error: ‘current’ undeclared (first use in this function)
  161 |     if (current
      |         ^~~~~~~
./samples/SAFE/__tmp_f0b91496.c:161:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f0b91496.c:161:16: error: expected ‘)’ at end of input
  161 |     if (current
      |        ~       ^
      |                )
./samples/SAFE/__tmp_f0b91496.c:161:5: error: expected declaration or statement at end of input
  161 |     if (current
      |     ^~
